# soro-s

./: .clang-format  .clang-tidy.in  .gdbinit  .gitignore  .pkg  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  accelerate.patch  flake.nix
cmake/: pkg.cmake  (+5 more)
tools/export_element_csv/: CMakeLists.txt
tools/export_element_csv/src/: export_element_csv.cc
tools/export_exclusion_graph/: CMakeLists.txt
tools/export_exclusion_graph/src/: export_exclusion_graph.cc
tools/export_train_path/: CMakeLists.txt
tools/export_train_path/src/: export_train_path.cc
tools/find_duplicate_trains/: CMakeLists.txt
tools/find_duplicate_trains/src/: find_duplicate_trains.cc
web/client/: .eslintrc.cjs  .prettierrc  .stylelintrc.json  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  webpack.config.js
web/client/cmake/: emscripten-fix.cmake
web/client/components/disruption/: disruption.js
web/client/components/exclusion/: ExclusionComponent.js  exclusion_component.html
web/client/components/infrastructure/: InfrastructureComponent.js  infrastructure_component.html
web/client/components/infrastructure/map/: addIcons.js  elementTypes.js  infrastructureMap.js  mapStyle.js
web/client/components/infrastructure/station_detail/: stationDetail.js  station_detail.html
web/client/components/ordering_graph/: OrderingGraphComponent.js  bundle.js  data2.json  index.ts  main.js  ordering_graph.css  ordering_graph_component.html  sigma_graph.ts  test2.json
web/client/components/ordering_graph/api/: api_graph.ts
web/client/components/ordering_graph/graph/: delete.ts  settings.ts  sigma_graph.ts
web/client/components/simulation/: SimulationComponent.js  Tooltip.js  simulation_component.html
web/client/components/timetable/: TimetableComponent.js
web/client/embind/src/: embind_cista.cc  embind_fs.cc  embind_infrastructure.cc  embind_sim.cc  embind_timetable.cc
web/client/model/: InfrastructureManager.js  TimetableManager.js
web/client/src/: App.test.ts  App.vue  main.ts  style.ts  vuetify.ts
web/client/src/api/: api-client.test.ts  api-client.ts
web/client/src/components/: disruption-detail.vue  disruption.vue  soro-button.test.ts  soro-button.vue  soro-collapsible.vue  soro-navigation-content.vue  soro-navigation.vue  soro-overlay.vue  soro-select.test.ts  soro-select.vue  station-detail.vue  station-search.vue
web/client/src/components/base/: soro-button.vue  soro-collapsible.vue  soro-datetimerange.vue  soro-id-input.vue  soro-select.vue  soro-switch.vue
web/client/src/components/common/: soro-n-way-switch.vue
web/client/src/components/disruption/: disruption.css  disruption.html  disruption.js
web/client/src/components/golden-layout-components/: InfrastructureComponent.vue  SimulationComponent.vue  TimetableComponent.vue
web/client/src/components/infrastructure/: InfrastructureComponent.js  add-icons.test.ts  add-icons.ts  addIcons.js  addIcons.ts  display-modes.ts  element-types.ts  elementTypes.js  elementTypes.ts  highlight-helpers.ts  icon-modes.ts  infrastructure-legend.test.ts  infrastructure-legend.vue  infrastructure-map.test.ts  infrastructure-map.vue  infrastructure.css  infrastructureMap.js  infrastructureMap.ts  infrastructure_component.html  map-layers.ts  map-style.ts  mapStyle.js  mapStyle.ts  mileage-direction.ts
web/client/src/components/navigation/: soro-navigation-content.vue  soro-navigation-menu-content.vue  soro-navigation.test.ts  soro-navigation.vue
web/client/src/components/ordering/: ordering-graph.vue  settings.ts
web/client/src/components/select/: soro-select.vue
web/client/src/components/sidebar/: sidebar.vue
web/client/src/components/simulation/: SimulationComponent.js  Tooltip.js  d3Graph.js  simulation.css  simulation_component.html
web/client/src/components/timetable/: TimetableComponent.js  timetable_component.html
web/client/src/golden-layout/: GlComponent.vue  Glayout.vue  README.md  gl-component.vue  glayout.vue  golden-layout-adapter.d.ts  golden-layout-adapter.test.ts  golden-layout-adapter.vue  golden-layout-component.test.ts  golden-layout-component.vue  golden-layout-constants.ts  goldenlayout-base.css  goldenlayout-mdl-theme.css
web/client/src/golden-layout/components/: InfrastructureComponent.test.ts  InfrastructureComponent.vue  OrderingGraphComponent.vue  SimulationComponent.vue  TimetableComponent.vue
web/client/src/model/: InfrastructureManager.js  TimetableManager.js
web/client/src/stores/: golden-layout-store.test.ts  golden-layout-store.ts  infrastructure-store.js  infrastructure-store.test.ts  infrastructure-store.ts  settings-store.ts  sidebar-store.ts  stores.ts  timetable-store.js  timetable-store.ts
web/client/src/style/: goldenlayout-base.css  goldenlayout-mdl-theme.css  material-icons.css  material-select.css  matter.css  style.css
web/client/src/test/: App.test.ts
web/client/src/test-utils/: index.d.ts  mount-with-defaults.ts  test-setup.ts
web/client/src/test/golden-layout/: golden-layout-adapter.test.ts  golden-layout-component.test.ts
web/client/src/test/helpers/: helper-components.ts  mount-with-defaults.ts  test-setup.ts
web/client/src/test/stores/: infrastructure-store.test.ts  settings-store.test.ts  (+1 more)
web/client/src/util/: HttpClient.ts  IDBFSHelper.js  SoroClient.ts  Tooltip.js  devMode.ts  getFileContents.js  goldenLayoutHelper.js  iterate.js  timer.ts
web/client/style/: collapsible.css  material-icons.css  material-select.css  matter.css  style.css
web/client/utl/: IDBFSHelper.js  Tooltip.js  goldenLayoutHelper.js  iterate.js
web/server/: CMakeLists.txt
web/server/profile/: background.lua  profile.lua
web/server/server_resources/misc/: btrs_geo.csv
web/server/server_resources/profile/: profile.lua
web/server/src/: http_server.cc  main.cc  osm_util.cc  search_util.cc  server.cc  soro_server.cc
web/server/src/import/: import.cc
web/server/src/osm_export/: interpolation.cc  osm_export.cc
web/server/test/src/: osm_export_test.cc  search_tests.cc  way_interpolation_test.cc
(+767 files in other folders)
